// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Commands npm whoami it should print the npm registry username for a given scope 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: bar-user
➤ YN0000: Done
",
}
`;

exports[`Commands npm whoami it should print the npm registry username when config has a valid npmAuthIdent 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: foo-user
➤ YN0000: Done
",
}
`;

exports[`Commands npm whoami it should print the npm registry username when config has a valid npmAuthToken 1`] = `
Object {
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0000: foo-user
➤ YN0000: Done
",
}
`;
